--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,14 @@
-*{ margin-left: 15px;
-    font-family: 'Times New Roman', Times, serif;
+* {
+  margin-left: 15px;
+  margin-right: 15px;
+  font-family: "Times New Roman", Times, serif;
 }
-#botón-contacto{
-    margin-left: 0px;
+html {
+  background-color: #daedff;
+}
+.info {
+  width: viewport-lenght;
+  background-color: #f8defbe9;
+  padding: 0 20px 20px 20px;
+  border: 5px solid rgba(142, 142, 142, 0.514);
 }
