--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,3 +12,10 @@ html {
   padding: 0 20px 20px 20px;
   border: 5px solid rgba(142, 142, 142, 0.514);
 }
+td,
+th {
+  padding: 7px;
+}
+input {
+  margin-bottom: 4px;
+}
